--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Byte-compiled / optimized / DLL files
-.DS_Store/
-
+.DS_Store
+docs/.DS_Store
+ruben_example.ipynb
 __pycache__/
 *.py[cod]
 *$py.class
-
+htmlcov/
 # C extensions
 *.so
 
