--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "eticas-audit"
-version = "0.1.1"
+version = "0.1.2"
 description = "An open-source Python library designed for developers to calculate fairness metrics and assess bias in machine learning models."
 readme = "README.md"
 authors = [{name = "Eticas AI", email = "it@eticas.ai"}]
 license = {text = "Apache-2.0"}
 dynamic = ['requires-python']
 
-[tool.setuptools]
-packages = [
-    "eticas"
-]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["eticas*"]
