--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "eticas-audit"
-version = "0.1.2"
+version = "0.1.4"
 description = "An open-source Python library designed for developers to calculate fairness metrics and assess bias in machine learning models."
 readme = "README.md"
 authors = [{name = "Eticas AI", email = "it@eticas.ai"}]
 license = {text = "Apache-2.0"}
-dynamic = ['requires-python']
+requires-python = ">=3.11.9"
+dynamic = ['dependencies']
 
 [tool.setuptools.packages.find]
 where = ["."]
